log
Fri 12 Aug 2022 12:57:13 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[] n);
      |                     ^
exercises.c:44:13: error: too few arguments to function ‘sumaN’
   44 |   *suma = t-sumaN(a[] n);
      |             ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
b17c33c
